[gd_scene load_steps=19 format=3 uid="uid://bgp2c3flg844q"]

[ext_resource type="Script" uid="uid://cu13xayklf6jr" path="res://dialogue/styles/blue_archive/BaBalloon.gd" id="1_uqcic"]
[ext_resource type="Texture2D" uid="uid://by8xugr1wo3b7" path="res://assets/BA/Images/UIs/03_Scenario/01_Background/bg_aronaroom.jpg" id="2_b75mb"]
[ext_resource type="Theme" uid="uid://15skljnwxp26" path="res://dialogue/styles/blue_archive/ba_dialogue.theme" id="4_a0r7k"]
[ext_resource type="PackedScene" uid="uid://ckvgyvclnwggo" path="res://addons/dialogue_manager/dialogue_label.tscn" id="5_eewl6"]
[ext_resource type="FontFile" uid="uid://nngtd7c6kb7w" path="res://dialogue/styles/blue_archive/fonts/ChillRoundGothic_Regular.otf" id="6_64i78"]
[ext_resource type="Script" uid="uid://bb52rsfwhkxbn" path="res://addons/dialogue_manager/dialogue_responses_menu.gd" id="6_sexfa"]
[ext_resource type="Texture2D" uid="uid://dahqfxvrus2km" path="res://assets/BA/Images/UIs/00_Images/Common_Bg_Texture_Type01.png" id="8_3m0jv"]
[ext_resource type="PackedScene" uid="uid://byyxo6de8slh7" path="res://spine/arona/arona_spine.tscn" id="8_hnmia"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_spyqn"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.329412, 0.329412, 0.329412, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ri4m3"]
bg_color = Color(0.121569, 0.121569, 0.121569, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e0njw"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6, 0.6, 0.6, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxLine" id="StyleBoxLine_slu31"]
color = Color(0.6, 0.6, 0.6, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uy0d5"]
bg_color = Color(1, 1, 1, 0)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_qq3yp"]
default_font_size = 20
Button/styles/disabled = SubResource("StyleBoxFlat_spyqn")
Button/styles/focus = SubResource("StyleBoxFlat_ri4m3")
Button/styles/hover = SubResource("StyleBoxFlat_e0njw")
Button/styles/normal = SubResource("StyleBoxFlat_e0njw")
HSeparator/constants/separation = 8
HSeparator/styles/separator = SubResource("StyleBoxLine_slu31")
MarginContainer/constants/margin_bottom = 0
MarginContainer/constants/margin_left = 0
MarginContainer/constants/margin_right = 0
MarginContainer/constants/margin_top = 0
Panel/styles/panel = SubResource("StyleBoxFlat_uy0d5")

[sub_resource type="Gradient" id="Gradient_wj8x0"]
offsets = PackedFloat32Array(0, 0.606061, 1)
colors = PackedColorArray(0, 0, 0.0862745, 0.72549, 0, 0, 0.0941176, 0.498039, 0, 0, 0.101961, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_q1fsb"]
gradient = SubResource("Gradient_wj8x0")
fill_from = Vector2(0, 1)
fill_to = Vector2(0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1g0ef"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Theme" id="Theme_j0bw8"]
Button/colors/font_color = Color(0.0509804, 0.121569, 0.231373, 1)
Button/colors/font_disabled_color = Color(0.0509804, 0.121569, 0.231373, 1)
Button/colors/font_focus_color = Color(0.0509804, 0.121569, 0.231373, 1)
Button/colors/font_hover_color = Color(0.0509804, 0.121569, 0.231373, 1)
Button/colors/font_pressed_color = Color(0.0509804, 0.121569, 0.231373, 1)
Button/font_sizes/font_size = 25
Button/fonts/font = ExtResource("6_64i78")
Button/styles/focus = SubResource("StyleBoxFlat_1g0ef")
Button/styles/hover = SubResource("StyleBoxFlat_1g0ef")
Button/styles/normal = SubResource("StyleBoxFlat_1g0ef")
Button/styles/pressed = SubResource("StyleBoxFlat_1g0ef")

[node name="Balloon" type="CanvasLayer"]
layer = 100
script = ExtResource("1_uqcic")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -80.64
offset_bottom = 80.64
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_b75mb")
expand_mode = 5

[node name="TextureRect2" type="TextureRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -216.0
offset_bottom = -0.421692
grow_horizontal = 2
grow_vertical = 2
expand_mode = 5

[node name="Spine" parent="." instance=ExtResource("8_hnmia")]
position = Vector2(599, 409)

[node name="Balloon" type="Panel" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 430.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_qq3yp")

[node name="Dialogue Background" type="TextureRect" parent="Balloon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_q1fsb")

[node name="Dialogue" type="MarginContainer" parent="Balloon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 115
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 115
theme_override_constants/margin_bottom = 0

[node name="MarginContainer" type="MarginContainer" parent="Balloon/Dialogue"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Balloon/Dialogue"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Balloon/Dialogue/VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("4_a0r7k")
bbcode_enabled = true
text = "圣娅"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="Balloon/Dialogue/VBoxContainer"]
layout_mode = 2

[node name="CharacterName" type="Label" parent="Balloon/Dialogue/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("4_a0r7k")
theme_override_font_sizes/font_size = 36
text = "圣娅"

[node name="SubtitleLabel" type="Label" parent="Balloon/Dialogue/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("4_a0r7k")
theme_override_colors/font_color = Color(0.486275, 0.815686, 1, 1)
theme_override_font_sizes/font_size = 26
text = "茶话会"

[node name="CharacterLabel" type="RichTextLabel" parent="Balloon/Dialogue/VBoxContainer"]
visible = false
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 2
mouse_filter = 1
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "Character"
fit_content = true
scroll_active = false

[node name="HSeparator" type="HSeparator" parent="Balloon/Dialogue/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="DialogueLabel" parent="Balloon/Dialogue/VBoxContainer" instance=ExtResource("5_eewl6")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("4_a0r7k")
text = "…归根结底，伊甸园条约就是一个关于〖 摒弃仇恨 〗的约定 。"

[node name="Choices" type="MarginContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -105.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_j0bw8")
theme_override_constants/margin_left = 150
theme_override_constants/margin_right = 150

[node name="ResponsesMenu" type="VBoxContainer" parent="Choices" node_paths=PackedStringArray("response_template")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 10
script = ExtResource("6_sexfa")
response_template = NodePath("Choice")

[node name="Panel" type="Panel" parent="Choices/ResponsesMenu"]
custom_minimum_size = Vector2(0, 21.925)
layout_mode = 2

[node name="TextureRect3" type="TextureRect" parent="Choices/ResponsesMenu/Panel"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -46.0
offset_right = -2.0
grow_vertical = 2
texture = ExtResource("8_3m0jv")
expand_mode = 2
stretch_mode = 4
flip_h = true
flip_v = true

[node name="Choice" type="Button" parent="Choices/ResponsesMenu"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "……"

[node name="TextureRect" type="TextureRect" parent="Choices/ResponsesMenu/Choice"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 76.0
grow_vertical = 2
texture = ExtResource("8_3m0jv")
expand_mode = 1
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="Choices/ResponsesMenu/Choice"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -76.0
grow_vertical = 2
texture = ExtResource("8_3m0jv")
expand_mode = 1
stretch_mode = 4
flip_h = true
flip_v = true

[node name="BoxContainer" type="BoxContainer" parent="Choices"]
visible = false
layout_mode = 2
vertical = true

[node name="ResponseExample4" type="Button" parent="Choices/BoxContainer"]
layout_mode = 2
text = "……"

[node name="TextureRect" type="TextureRect" parent="Choices/BoxContainer/ResponseExample4"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 165.0
grow_vertical = 2
texture = ExtResource("8_3m0jv")
expand_mode = 1
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="Choices/BoxContainer/ResponseExample4"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -44.0
grow_vertical = 2
texture = ExtResource("8_3m0jv")
expand_mode = 2
stretch_mode = 4
flip_h = true
flip_v = true

[node name="ResponseExample5" type="Button" parent="Choices/BoxContainer"]
layout_mode = 2
text = "……"

[node name="TextureRect" type="TextureRect" parent="Choices/BoxContainer/ResponseExample5"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 165.0
grow_vertical = 2
texture = ExtResource("8_3m0jv")
expand_mode = 1
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="Choices/BoxContainer/ResponseExample5"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -44.0
grow_vertical = 2
texture = ExtResource("8_3m0jv")
expand_mode = 2
stretch_mode = 4
flip_h = true
flip_v = true

[node name="ResponseExample6" type="Button" parent="Choices/BoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "……"

[node name="TextureRect" type="TextureRect" parent="Choices/BoxContainer/ResponseExample6"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 165.0
grow_vertical = 2
texture = ExtResource("8_3m0jv")
expand_mode = 1
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="Choices/BoxContainer/ResponseExample6"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -76.0
grow_vertical = 2
texture = ExtResource("8_3m0jv")
expand_mode = 2
stretch_mode = 4
flip_h = true
flip_v = true
